Clean up code & fix text alignment (finally)

--- a/css/cards.css
+++ b/css/cards.css
@@ -8,8 +8,8 @@
     box-shadow: 0 70px 140px 0 rgba(130,136,171,.2);
     font-family: 'Playfair Display', serif;
     height: 350px;
-
 }
+
 
 .work-wrapper-r {
     background: #ee9ca7;  /* fallback for old browsers */
@@ -56,6 +56,7 @@ p.work-wrap-text {
     line-height: 1.78;
     letter-spacing: .44px;
     color: #7c82a2;
+    text-align: left;
 }
 
 p.work-wrap-text-alt {
@@ -230,6 +231,7 @@ h3.title-alt {
 
 @media (max-width: 991px) {
     .work-wrapper-l {
+        text-align: center;
         background-color: #fff;
         border-radius: 15px 15px 0 0;
         padding: 25px 45px;
@@ -295,6 +297,17 @@ h3.title-alt {
         text-align: center;
         margin-top: 10px;
         font-family: Montserrat,sans-serif;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 1.78;
+        letter-spacing: .44px;
+        color: #7c82a2;
+    }
+
+    p.work-wrap-text {
+        text-align: center;
+        margin-top: 10px;
+        font-family: Montserrat, sans-serif;
         font-size: 14px;
         font-weight: 500;
         line-height: 1.78;
